<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_database"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_margin="5dp"
    tools:context=".DatabaseActivity" >

    <!-- Top menu action bar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:title="@string/database_bottom_bar_button"
        android:titleTextColor="@android:color/white"
        app:navigationIcon="@drawable/back_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Headers for the database RecyclerView scroll bar-->
    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:stretchColumns="*"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/topAppBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TableRow>
            <TextView
                android:text="@string/col_1"
                android:padding="8dp"
                android:textStyle="bold"
                android:textSize="7pt"
                android:gravity="center" />
            <TextView
                android:text="@string/col_2"
                android:padding="8dp"
                android:textStyle="bold"
                android:textSize="7pt"
                android:gravity="center" />
            <TextView
                android:text="@string/col_3"
                android:padding="8dp"
                android:textStyle="bold"
                android:textSize="7pt"
                android:gravity="center" />
            <TextView
                android:text="@string/col_4"
                android:padding="8dp"
                android:textStyle="bold"
                android:textSize="7pt"
                android:gravity="center" />
            <TextView
                android:text="@string/col_5"
                android:padding="8dp"
                android:textStyle="bold"
                android:textSize="7pt"
                android:gravity="center" />
        </TableRow>
    </TableLayout>

    <!-- Scrollable recyclerview content div for the database content -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tableRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@id/tableLayout"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <!-- Bottom navigation bar - Defined in res/menu/bottom_nav_menu.xml -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- FAB Button add item - Defined in res/drawable.xml -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/fab_add_item_button"
        android:src="@drawable/add_item"
        app:tint="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>