<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ActivityNotification"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:layout_margin="5dp"
    tools:context=".NotificationActivity">

    <!-- Top menu action bar -->
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/topAppBar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:title="@string/notification_bottom_bar_button"
        android:titleTextColor="@android:color/white"
        app:navigationIcon="@drawable/back_icon"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Text View to appear below the addItemQuantity EditText -->
    <TextView
        android:id="@+id/smsStatusText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:padding="10dp"
        android:text="@string/sms_permission_not_granted"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/smsStatusText"
        app:layout_constraintBottom_toTopOf="@id/btnSendStatusReport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Button to enable SMS notifications -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSendStatusReport"
        style="@style/SubmitButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="6dp"
        android:text="@string/enable_sms_notifications"
        app:layout_constraintTop_toBottomOf="@id/smsStatusText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <LinearLayout
        android:id="@+id/headerRow"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/btnSendStatusReport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/col_1"
            android:padding="3dp"
            android:textStyle="bold"
            android:textSize="7pt"
            android:gravity="center" />


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/col_3"
            android:padding="3dp"
            android:textStyle="bold"
            android:textSize="7pt"
            android:gravity="center" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/Minimum_QTY_allowed"
            android:padding="3dp"
            android:textStyle="bold"
            android:textSize="7pt"
            android:gravity="center" />
    </LinearLayout>

    <!-- Scrollable recyclerview content div for the database content -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notificationRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="10dp"
        android:layout_margin="4dp"
        app:layout_constraintTop_toBottomOf="@id/headerRow"
        app:layout_constraintBottom_toTopOf="@id/bottom_nav"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Bottom navigation bar - Defined in res/menu/bottom_nav_menu.xml -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_nav"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="?android:attr/windowBackground"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>